--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
         server_name  localhost;
         charset utf-8;
         location / {
-            proxy_set_header Host api.openai.com;
+            proxy_set_header Host $http_host;
             set $cip $remote_addr;
             if ($http_x_forwarded_for != "") {
                 set $cip $http_x_forwarded_for;
