--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,9 @@ http {
             proxy_set_header Connection upgrade;
              proxy_pass http://dremio:9047;
         }
+        location /login {
+            return 301 /sso/;
+        }
         location /sso/ {
             root html;
             index index.html;
