--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,7 @@ http {
             if ($http_x_forwarded_for != "") {
                 set $cip $http_x_forwarded_for;
             }
+            proxy_set_header X-Forwarded-For $cip;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection upgrade;
